[package]
name = "define"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.1.0"
openssl = { version = "0.10.66", features = ["vendored"] }
reqwest = "0.12.5"
serde = "1.0.206"
serde_derive = "1.0.206"
serde_json = "1.0.122"
tokio = { version = "1", features = ["full"] }
